Update brand text in index.html

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         <div class="brandMark" aria-hidden="true"></div>
         <div class="brandText">
           <b>JDS Apps</b>
-          <span>Cash Calculator • FREE & PRO</span>
+          <span>Cash calculator: Bill & Coin</span>
         </div>
       </a>
 
