Update footer and badge display in index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="badges">
         <span class="badge">Offline-first</span>
         <span class="badge">AdMob Ready</span>
-        <span class="badge pro">v2.0</span>
+        <!-- <span class="badge pro">v2.0</span> -->
       </div>
 
       <h1>Cash Calculator</h1>
@@ -286,7 +286,7 @@
       <p>&copy; <span id="year"></span> JDS Apps • Developer: Xjucelio</p>
       <p>
         <a href="mailto:xjdsapps@gmail.com">Contact Support</a> • 
-        <a href="/app-ads.txt">app-ads.txt</a>
+        <a href="/app-ads.txt">Ad file: /app-ads.txt</a>
       </p>
     </footer>
 
