--- a/index.html
+++ b/index.html
@@ -14,27 +14,21 @@
 
   <style>
     :root {
-      /* Paleta Original Mantida & Refinada */
       --bg0: #050505;
       --bg1: #0b1016;
-      
       --text: #ffffff;
       --muted: #94a3b8;
       --muted2: #64748b;
-
       --gold: #f7d35f;
       --gold-dark: #b4860b;
       --gold-glow: rgba(247, 211, 95, 0.4);
-
       --card-bg: rgba(255, 255, 255, 0.03);
       --card-border: rgba(255, 255, 255, 0.08);
       --stroke: rgba(255, 255, 255, 0.12);
-
       --radius: 24px;
       --container-width: 900px;
     }
 
-    /* Reset básico */
     * { box-sizing: border-box; outline: none; }
     html, body { margin: 0; padding: 0; height: 100%; }
 
@@ -44,14 +38,12 @@
       color: var(--text);
       line-height: 1.6;
       overflow-x: hidden;
-      /* Fundo gradiente sutil original */
       background: 
         radial-gradient(800px 800px at 50% 0%, rgba(110, 231, 255, 0.08), transparent 80%),
         radial-gradient(600px 600px at 90% 90%, rgba(139, 92, 246, 0.08), transparent 80%),
         linear-gradient(180deg, var(--bg0), var(--bg1));
     }
 
-    /* Noise overlay (mantido do original pois dá textura premium) */
     .noise {
       position: fixed; inset: 0; pointer-events: none; opacity: 0.05; z-index: 1;
       background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
@@ -67,7 +59,6 @@
       align-items: center;
     }
 
-    /* HEADER & HERO */
     .hero {
       text-align: center;
       margin-bottom: 60px;
@@ -99,7 +90,6 @@
       margin-bottom: 32px;
     }
 
-    /* BADGES */
     .badges {
       display: flex; gap: 8px; justify-content: center; flex-wrap: wrap; margin-bottom: 30px;
     }
@@ -110,13 +100,7 @@
       background: rgba(255,255,255,0.05);
       color: var(--muted);
     }
-    .badge.pro {
-      border-color: rgba(247, 211, 95, 0.3);
-      color: var(--gold);
-      background: rgba(247, 211, 95, 0.05);
-    }
 
-    /* BUTTONS */
     .actions {
       display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;
     }
@@ -144,7 +128,6 @@
     }
     .btn-secondary:hover { background: rgba(255,255,255,0.1); border-color: rgba(255,255,255,0.3); }
 
-    /* COMPARISON SECTION */
     .comparison-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -153,7 +136,6 @@
       margin-top: 20px;
     }
 
-    /* Estilo do Cartão */
     .card {
       background: var(--card-bg);
       border: 1px solid var(--card-border);
@@ -197,7 +179,6 @@
     }
     .highlight .icon { background: var(--gold); color: #000; }
 
-    /* FOOTER */
     footer {
       margin-top: 60px; padding-top: 20px;
       border-top: 1px solid var(--stroke);
@@ -207,7 +188,6 @@
     footer a { color: var(--muted); text-decoration: none; margin: 0 10px; transition: color 0.2s; }
     footer a:hover { color: var(--text); }
 
-    /* RESPONSIVIDADE */
     @media (max-width: 700px) {
       .comparison-grid { grid-template-columns: 1fr; }
       .hero { margin-bottom: 40px; }
@@ -230,19 +210,19 @@
       <div class="badges">
         <span class="badge">Offline-first</span>
         <span class="badge">AdMob Ready</span>
-        <!-- <span class="badge pro">v2.0</span> -->
+        <span class="badge" style="color: var(--gold)">Privacy-focused</span>
       </div>
 
       <h1>Cash Calculator</h1>
       <p class="subtitle">
         A fast, privacy-first utility for counting bills and coins. <br>
-        Your data stays on your device.
+        Simple, secure, and stays on your device.
       </p>
 
       <div class="actions">
         <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.xjucelio.cashcalculator" target="_blank">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.3,12.5L17.38,15.69L15.13,13.44L17.38,11.2L20.3,14.38C20.93,13.9 20.93,12.9 20.3,12.5M16.81,8.88L14.54,11.15L6.05,2.66L16.81,8.88Z"/></svg>
-          Download on Google Play
+          Get it on Google Play
         </a>
         <a class="btn btn-secondary" href="https://sites.google.com/view/cash-calculator-privacy/home" target="_blank">
           Privacy Policy
@@ -255,28 +235,30 @@
       <div class="card">
         <div class="card-header">
           <h2>Standard</h2>
-          <span>For occasional use</span>
+          <span>Free edition</span>
           <div class="price-tag">FREE</div>
         </div>
         <ul class="features">
-          <li><div class="icon">✓</div> <div><strong>Basic History</strong> <br>Save your recent calculations.</div></li>
-          <li><div class="icon">✓</div> <div><strong>Clear Data</strong> <br>Wipe saved history instantly.</div></li>
-          <li><div class="icon">✓</div> <div><strong>Standard Colors</strong> <br>Access to basic themes.</div></li>
-          <li style="opacity: 0.6"><div class="icon" style="background: transparent; border: 1px solid #555">i</div> <div>Includes Banner & Interstitial Ads</div></li>
+          <li><div class="icon">✓</div> <div><strong>Recent History</strong> <br>Save up to 3 entries.</div></li>
+          <li><div class="icon">✓</div> <div><strong>Dark & White Themes</strong> <br>Essential visual modes.</div></li>
+          <li><div class="icon">✓</div> <div><strong>Accent Colors</strong> <br>Choose from 8+ available colors.</div></li>
+          <li><div class="icon">✓</div> <div><strong>Clear History</strong> <br>Reset your data anytime.</div></li>
+          <li style="opacity: 0.6; margin-top: 10px;"><div class="icon" style="background: transparent; border: 1px solid #555">i</div> <div>Includes Banner & Interstitial Ads.</div></li>
         </ul>
       </div>
 
       <div class="card highlight">
         <div class="card-header">
           <h2>PRO Version</h2>
-          <span>For power users</span>
+          <span>Premium experience</span>
           <div class="price-tag">One-time purchase</div>
         </div>
         <ul class="features">
-          <li><div class="icon">★</div> <div><strong>No Ads</strong> <br>Remove all ads permanently.</div></li>
-          <li><div class="icon">★</div> <div><strong>Unlimited History</strong> <br>Save as many entries as needed.</div></li>
-          <li><div class="icon">★</div> <div><strong>Edit & Share</strong> <br>Modify entries and share PDF/Text.</div></li>
-          <li><div class="icon">★</div> <div><strong>Exclusive Themes</strong> <br>Unlock Anthracite & Gold themes.</div></li>
+          <li><div class="icon">★</div> <div><strong>No Ads</strong> <br>Permanent ad removal.</div></li>
+          <li><div class="icon">★</div> <div><strong>Extended History</strong> <br>Store up to 100 entries locally.</div></li>
+          <li><div class="icon">★</div> <div><strong>Edit & Share</strong> <br>Modify entries and share via WhatsApp.</div></li>
+          <li><div class="icon">★</div> <div><strong>Gray Theme & PRO Logo</strong> <br>Exclusive UI and branding.</div></li>
+          <li><div class="icon">★</div> <div><strong>All Accents</strong> <br>Unlock the full color palette.</div></li>
         </ul>
       </div>
 
@@ -295,7 +277,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
     
-    // Animação de entrada suave
     document.addEventListener("DOMContentLoaded", () => {
       document.querySelector('.hero').style.opacity = 0;
       document.querySelector('.hero').animate([
