--- a/bruno/index.html
+++ b/bruno/index.html
@@ -73,7 +73,7 @@
     .wrap { width: min(var(--max), calc(100% - 48px)); margin: 0 auto; }
 
     header {
-      position: sticky; top: 0; z-index: 20;
+      position: relative; z-index: 20;
       backdrop-filter: blur(16px);
       background: linear-gradient(180deg, rgba(5,6,8,0.85), rgba(5,6,8,0.4));
       border-bottom: 1px solid var(--stroke);
