--- a/bruno/index.html
+++ b/bruno/index.html
@@ -775,7 +775,7 @@
       <div class="wrap">
         <div class="footerCard">
           <p>
-            Made with love for Bruno — and for Maria, and the whole family.
+            Made with love for Bruno - and for Maria, and the whole family.
           </p>
           <p class="small">© <span id="year"></span> • Bruno</p>
         </div>
